<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ApiSamples</string>
    <string name="hello_world"><b>Hello, <i>World!</i></b></string>
    <string name="action_bar_usage">App/Tool Bar/ToolBar的简单使用</string>
    <string name="action_bar_transparent">App/Tool Bar/透明导航栏和状态栏</string>
    <string name="action_bar_search">搜索</string>
    <string name="action_bar_add">添加</string>
    <string name="action_bar_edit">编辑</string>
    <string name="action_bar_share">分享</string>
    <string name="action_bar_sort">排序</string>
    <string name="action_bar_sort_alpha">按字母排序</string>
    <string name="action_bar_sort_size">按大小排序</string>
    <string name="action_bar_img_translucent">全局图片</string>
    <string name="activity_animation">App/Activity/Activity跳转动画</string>
    <string name="activity_animation_fade">淡入</string>
    <string name="activity_animation_zoom">缩小</string>
    <string name="activity_modern_animation_fade">JELLY_BEAN（4.1）以上淡入</string>
    <string name="activity_modern_animation_zoom">JELLY_BEAN（4.1）以上缩小</string>
    <string name="activity_scale_up_animation">按比例放大</string>
    <string name="activity_zoom_thumbnail_animation">缩略图放大</string>
    <string name="activity_no_animation">无动画</string>
    <string name="activity_custom_dialog">App/Activity/Custom Dialog</string>
    <string name="activity_dialog_text">这里使用自定义主题Theme.AppCompat.Light.Dialog新建Activity,
        在AndroidManifest配置theme属性,使它看起来就是自定义dialog,还有的是Activity如果继承AppCompatActivity则
    默认有标题，继承Activity则没有</string>
    <string name="activity_dialog">App/Activity/Dialog</string>
    <string name="dialog_activity_add">添加内容</string>
    <string name="dialog_activity_remove">移除内容</string>
    <string name="theme_activity_dialog_text">你可以使用theme主题将一个activity改变成看起来像一个dialog,其中
        的内容可以自适应显示在dialog里,此时的Activity如果继承的是AppCompatActivity则必须用以Theme.AppCompat为主
        题的dialog，否则会报java.lang.IllegalStateException</string>
    <string name="activity_finish_affinity">App/Activity/Finish Affinity</string>
    <string name="next">下一个</string>
    <string name="finish">FINISH</string>
    <string name="finishiaffinity_activity_text">finishiAffinity()的使用场景是：关闭你当前activity所在栈中
        的所有的activity。调用activity对象的finishiAffinity()方法，可以关闭当前activity所属的activity栈中所有
        的activity。如果所有activity都保存在默认栈中，则使用该方法会直接退出程序。需要注意的一点是finishAffinity方
        法在某些低版本的手机上并不能完全发挥其作用，仅相当于finish的功能，即只能finish掉当前的activity并不能清空当前
        栈中的所有的activity\n 在AndroidManifest文件中的activity添加android:taskAffinity=\":finish\"//指定当前activity的所在栈  </string>
    <string name="activity_intent_activity_flags">App/Activity/Intent Activity Flags</string>
    <string name="flag_activity_clear_task">FLAG_ACTIVITY_CLEAR_TASK</string>
    <string name="flag_activity_clear_task_pi">FLAG_ACTIVITY_CLEAR_TASK (PI)</string>
    <string name="activity_intents">App/Activity/Intents</string>
    <string name="intents">各种intents</string>
    <string name="get_music">获取音乐</string>
    <string name="get_image">获取图片</string>
    <string name="get_stream">获取流</string>
    <string name="activity_overscan">App/Activity/Overscan</string>
    <string name="activity_persistent">App/Activity/Persistent State</string>
    <string name="initial_text">初始文本</string>
    <string name="saves_state">这里保存文本区域的内容状态：</string>
    <string name="no_saves_state">这里不保存文本区域的内容状态：</string>
    <string name="persistent_msg">通过getPreferences(0).edit()和getPreferences(0)来保存activity状态</string>
    <string name="activity_presentation">App/Activity/Presentation</string>
    <string name="presentation_text">Presentation是一种特殊的对话框，主要用于在另外一个屏幕上显示内容。值得注意的是在创建 presentation前必须把presentation与它的目标屏幕相关联。所以使用前必须为它选择一个Display。选择display 的方法主要有两种，一是用MediaRouter,二是用DisplayManager,这里用的是第二种。</string>
    <string name="presentation_show_all_displays">显示所有displays</string>
    <string name="presentation_info_text">info</string>
    <string name="presentation_photo_text">Showing photo #%1$d on display #%2$d: %3$s.</string>
    <string name="presentation_display_id_text">Display #%1$d: %2$s</string>
    <string name="presentation_alert_info_text">Display #%1$d Info</string>
    <string name="presentation_alert_dismiss_text">OK</string>
    <string name="activity_presentation_with_media_router">App/Activity/Presentation with Media Router</string>
    <string name="presentation_with_media_router_activity_text">这个Demo演示了presentation的另一种选择Display的方式：利用MediaRouterAPI。 媒体路由服务一直保持着对系统中可用的音频和视频路由的追踪。当媒体路由被选择或取消选择或者路由首选的presentation显示屏幕发生变化时，它都会发送通知消息。所以一个应用程序可以非常简单地观察这些通知消息来并自动地在首选的presentation显示屏幕上显示或撤消一个presentation。</string>
    <string name="presentation_with_media_router_now_playing_locally">在本机屏幕： \'%s\' 中显示内容.</string>
    <string name="presentation_with_media_router_now_playing_remotely">在屏幕： \'%s\' 中显示presentation的内容.</string>
    <string name="quick_contacts_demo">App/Activity/QuickContactsDemo</string>
    <string name="quick_contacts_text">点击头像可查看联系人信息</string>
    <string name="activity_receive_result">App/Activity/Receive Result</string>
    <string name="receive_result_instructions">点击按钮，获取得到activity result，然后显示在下面：</string>
    <string name="get_result">获取结果</string>
    <string name="pick_result">选择发送一个结果，或者直接取消返回</string>
    <string name="corky">Corky</string>
    <string name="activity_recreate">App/Activity/Recreate</string>
    <string name="activity_recreate_msg">示范重新创建一个活动，主要改变的是主题</string>
    <string name="activity_redirect">App/Activity/Redirection</string>
    <string name="redirect_enter">按下按钮，下一个activity将有条件地重定向到另一个activity，从用户那里收集数据</string>
    <string name="go">go</string>
    <string name="redirect_main">你现在看到的main activity正常运行，因为用户文本设置为：</string>
    <string name="clear_text">清除并离开</string>
    <string name="new_text">新文本</string>
    <string name="apply">应用</string>
    <string name="activity_reorder">App/Activity/Reorder Activities</string>
    <string name="reorder_on_launch">这是一个序列的四个activity，第四个activity则使用Intent.FLAG_ACTIVITY_REORDER_TO_FRONT标志将第二个activity的历史堆栈的前面，在这之后返回排序的activity顺序为：第四，第三，第一</string>
    <string name="reorder_launch_two">运行第二个activity</string>
    <string name="activity_rotation_animation">App/Activity/Rotation Animation</string>
    <string name="rotation_animation_fullscreen">全屏</string>
    <string name="rotation_animation_decription">选择全屏则不显示状态栏，选择全屏后再选择屏幕切换动画效果后可旋转查看</string>
    <string name="rotation_animation_selection">旋转动画：旋转后</string>
    <string name="rotate">有转动</string>
    <string name="xfade">淡入淡出</string>
    <string name="jumpcut">立即显示</string>
    <string name="activity_screen_orientation">App/Activity/Screen Orientation</string>
    <string name="screen_orientation_summary">设置activity的方向。通常你可以在清单中android:screenOrientation设置所需的模式</string>
    <string name="screen_orientation">Screen Orientation</string>
    <string name="activity_secure_window">App/Activity/Secure Surfaces</string>
    <string name="secure_activity_text">这里的安全模式主要是不允许截屏；设置了这个属性的窗口，在窗口可见的情况下，是会禁用系统的截图功能的。</string>
    <string name="secure_dialog">安全弹框</string>
    <string name="secure_dialog_text">安全模式下的dialog</string>
    <string name="activity_setwallpaper">App/Activity/SetWallpaper</string>
    <string name="randomize">随机</string>
    <string name="set_wallpaper">设置壁纸</string>
    <string name="soft_input_modes">App/Activity/Soft Input Modes</string>
    <string name="soft_input_modes_label">调整模式：</string>
    <string name="soft_input_modes_content">这里是根据输入法的模式进行调整：
        SOFT_INPUT_ADJUST_NOTHING:不调整(输入法完全直接覆盖住)
        SOFT_INPUT_ADJUST_PAN:把整个Layout顶上去露出获得焦点的EditText,不压缩多余空间(整个窗口上移)
        SOFT_INPUT_ADJUST_RESIZE:整个Layout重新编排,重新分配多余空间(挤压窗口)
        SOFT_INPUT_ADJUST_UNSPECIFIED:系统自己根据内容自行选择上两种方式的一种执行(默认配置)
    </string>
    <string name="soft_input_modes_initial_text">这里是文本输入，点击可查看效果。这里根据输入法框的弹出进行不同的显示方式</string>
    <string name="soft_input_modes_summary">这里展示了输入法的不同模式下对整个窗口的影响</string>
    <string name="activity_translucent">App/Activity/Translucent</string>
    <string name="translucent_background">通过清单设置theme将activity透明化</string>
    <string name="activity_wallpaper">App/Activity/Wallpaper</string>
    <string name="activity_wallpaper_text">背景透明并直接透过覆盖在上面的activity,直接显示在壁纸之上</string>
    <string name="activity_alarm_controller">App/Alarm/Alarm Controller</string>
    <string name="alarm_controller">这里展示如何使用Alarm</string>
    <string name="one_shot_alarm">单次闹钟</string>
    <string name="start_repeating_alarm">重复闹钟</string>
    <string name="stop_repeating_alarm">停止重复闹钟</string>
    <string name="one_shot_received">一次闹钟过了</string>
    <string name="repeating_received">重复闹钟已响应</string>
    <string name="one_shot_scheduled">10s后会有一次闹钟,你可以尝试改变时间</string>
    <string name="repeating_unscheduled">停止重复闹铃</string>
    <string name="repeating_scheduled">每隔10s都会重复闹铃</string>
    <string name="activity_alarm_service">App/Alarm/Alarm Service</string>
    <string name="alarm_service">这里通过开启service来长期存活监听alarm</string>
    <string name="start_alarm_service">开启alarm service</string>
    <string name="simple_dialog">基本对话框</string>
    <string name="simple_list_dialog">简单列表对话框</string>
    <string name="single_choice_dialog">单选项列表对话框</string>
    <string name="multi_choice_dialog">多选项列表对话框</string>
    <string name="custom_theme_dialog">自定义主题对话框</string>
    <string name="custom_adapter_dialog">自定义Adapter对话框</string>
    <string name="custom_view_dialog">自定义View对话框</string>
    <string name="header_general">常规设置</string>
    <string name="header_quality">锁屏密码</string>
    <string name="header_expiration">过期密码</string>
    <string name="header_lock_wipe">锁屏 / wipe</string>
    <string name="header_encryption">加密</string>
    <string name="start_service">开启服务</string>
    <string name="stop_service">停止服务</string>
    <string name="status_bar_notifications_icons_only">图标</string>
    <string name="status_bar_notifications_icons_and_marquee">图标和字幕</string>
    <string name="status_bar_notifications_remote_views">可以自定义在Extended Status bar显示Notification的Layout，Extended Status Bar缺省显示Notification 是一个图标后接文字</string>
    <string name="status_bar_notifications_defaults">在适合情况下使用默认值</string>
    <string name="status_bar_notifications_happy">:-)</string>
    <string name="status_bar_notifications_ok">:-|</string>
    <string name="status_bar_notifications_sad">:-(</string>
    <string name="status_bar_notifications_clear">清除通知</string>
    <string name="status_bar_notifications_default_sound">声音</string>
    <string name="status_bar_notifications_default_vibrate">震动</string>
    <string name="status_bar_notifications_default_all">所有</string>
    <string name="msg_search">Search (搜索）是Android平台的一个核心功能之一，用户可以在手机搜索在线的或是本地的信息。
        Android平台为所有需要提供搜索或是查询功能的应用提供了一个统一的Search Framework来帮助实现Search功能。这里展示
        了几种不同的方法来调用搜索，屏幕顶部的Search Dialog和可以嵌到ContentView中的SearchView，
        应用可以将它放在屏幕上任何地方。</string>
    <string name="search_sect_invocation">调用搜索方法</string>
    <string name="label_onsearchrequested">搜索</string>
    <string name="search_sect_options">可选搜索参数</string>
    <string name="label_search_query_prefill">"预先填写查询: "</string>
    <string name="label_search_query_appdata">"应用程序数据: "</string>
    <string name="isolated_service_controller">这演示了使用android:isolatedProcess与服务。有两个服务,可以独立控制;
        他们将每次运行在自己的特殊进程。</string>
    <string name="start_service_1">启动服务1</string>
    <string name="stop_service_1">停止服务1</string>
    <string name="bind_service_1">绑定服务1</string>
    <string name="start_service_2">启动服务2</string>
    <string name="stop_service_2">停止服务2</string>
    <string name="bind_service_2">绑定服务2</string>
    <string name="local_service_controller">如果你在本例中启动Service之后，没有stopService ，这个Service将在后台一直运行，
        即使你退出AppDemo或是启动其它应用。</string>
    <string name="local_service_binding">绑定Service之后，即使你没有点击“unbind Service ”按钮，按“Back”键，
        Binding Activity退出时，Android系统会自动断开与LocalService的绑定。屏幕上方Notification会自动消失。</string>
    <string name="bind_service">绑定服务</string>
    <string name="unbind_service">解绑服务</string>
</resources>