<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.loften.android.api.app.AlertDialogSamples">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/simple_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple_dialog"/>

        <Button
            android:id="@+id/simple_list_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple_list_dialog"/>

        <Button
            android:id="@+id/single_choice_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/single_choice_dialog"/>

        <Button
            android:id="@+id/multi_choice_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multi_choice_dialog"/>

        <Button
            android:id="@+id/custom_adapter_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_adapter_dialog"/>

        <Button
            android:id="@+id/custom_theme_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_theme_dialog"/>

        <Button
            android:id="@+id/custom_view_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_view_dialog"/>
    </LinearLayout>
</ScrollView>
