<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_bar_notifications_icons_only"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/happy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_bar_notifications_happy"/>

            <Button
                android:id="@+id/neutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_bar_notifications_ok"/>

            <Button
                android:id="@+id/sad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_bar_notifications_sad"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/status_bar_notifications_icons_and_marquee"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/happyMarquee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_bar_notifications_happy"/>

            <Button
                android:id="@+id/neutralMarquee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_bar_notifications_ok"/>

            <Button
                android:id="@+id/sadMarquee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_bar_notifications_sad"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/status_bar_notifications_remote_views"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/happyViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_bar_notifications_happy"/>

            <Button
                android:id="@+id/neutralViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_bar_notifications_ok"/>

            <Button
                android:id="@+id/sadViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_bar_notifications_sad"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/status_bar_notifications_defaults"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/defaultSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_bar_notifications_default_sound"/>

            <Button
                android:id="@+id/defaultVibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_bar_notifications_default_vibrate"/>

            <Button
                android:id="@+id/defaultAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_bar_notifications_default_all"/>

        </LinearLayout>

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/status_bar_notifications_clear"/>

    </LinearLayout>

</ScrollView>
