<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.loften.android.api.app.RotationAnimation">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/rotation_animation_decription"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <CheckBox
        android:id="@+id/windowFullscreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/rotation_animation_fullscreen"/>

    <TextView
        android:id="@+id/rotation_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/windowFullscreen"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/rotation_animation_selection"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <RadioGroup
        android:id="@+id/rotation_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/rotation_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <RadioButton
            android:id="@+id/rotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rotate"/>

        <RadioButton
            android:id="@+id/crossfade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xfade"/>

        <RadioButton
            android:id="@+id/jumpcut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jumpcut"/>
    </RadioGroup>
</android.support.constraint.ConstraintLayout>
