<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:padding="4dip">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center_vertical|center_horizontal"
        android:paddingBottom="4dip"
        android:text="@string/isolated_service_controller"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/start1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_service_1"
            android:textAllCaps="false">

            <requestFocus/>
        </Button>

        <Button
            android:id="@+id/stop1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_service_1"
            android:textAllCaps="false">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/bind1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bind_service_1"/>

        <TextView
            android:id="@+id/status1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/start2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_service_2"
            android:textAllCaps="false">

            <requestFocus/>
        </Button>

        <Button
            android:id="@+id/stop2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_service_2"
            android:textAllCaps="false">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/bind2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bind_service_2"/>

        <TextView
            android:id="@+id/status2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"/>
    </LinearLayout>

</LinearLayout>

